# a2api

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
docker/: Dockerfile
scripts/: prepare-tauri-sidecar.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/server/: config.ts  index.ts
src/server/adapters/: index.ts  openaiCompatible.ts  platformAdapters.ts  types.ts
src/server/db/: index.ts  migrate.ts  schema.ts
src/server/middleware/: auth.ts  rateLimit.ts
src/server/services/: accountMonitorScheduler.ts  accountMonitorService.ts  accountService.ts  accountTokenService.ts  backgroundTaskService.ts  backupService.ts  backupWebdavService.ts  balanceScheduler.ts  balanceService.ts  clientConfigService.ts  downstreamKeyService.ts  downstreamPolicy.ts  maintenanceService.ts  migrationPlan.test.ts  modelCostService.ts  modelDiscoveryService.ts  monitorService.ts  notificationService.ts  oauthConnectionService.ts  oauthProviderService.ts  oauthSessionService.ts  proxyDebugTraceService.ts  proxyFileService.ts  proxyLogRetentionService.ts  proxyLogService.ts  proxyVideoTaskService.ts  routeDecisionSnapshotService.ts  routeRefreshService.ts  settingsService.ts  siteAnnouncementService.ts  siteApiEndpointService.ts  siteService.ts  statsService.ts  (+1 more)
src/web/: App.vue  api.ts  authSession.ts  components.d.ts  costDisplay.ts  main.ts  naiveTheme.ts  router.ts
(+58 files in other folders)
